<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".models.comment.AddCommentFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/post_add_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/post_add_comment_title"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_comment_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_comment_input"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/post_content_hint"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="15dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_comment_cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="107dp"
            android:layout_height="58dp"
            android:layout_gravity="start"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/post_comment_save_button"
            android:layout_width="107dp"
            android:layout_height="58dp"
            android:layout_gravity="end"
            android:text="@string/post" />

    </FrameLayout>

</LinearLayout>